# pssh

./: AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  MANIFEST.in  Makefile  Makefile.am  Makefile.in  PKG-INFO  READ.md  TODO  aclocal.m4  configure  configure.in  mkinstalldirs  pssh.spec  pssh.spec.in  setup.py
doc/: index.html  pssh-HOWTO.ps  pssh-HOWTO.sgml
lib/python/: basethread.py  psshutil.py
lib/python2.2/: basethread.py  psshutil.py
libexec/: pssh_askpass
man/man1/: pssh.1
pssh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
psshlib/: askpass.py  askpass_client.py  askpass_server.py  basethread.py  cli.py  color.py  manager.py  parser.py  psshutil.py  task.py
test/: ips.txt  test.py  test.sh
